--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.25.1",
